--- a/internaltools/updateuser/templates/updateuser/sample.html
+++ b/internaltools/updateuser/templates/updateuser/sample.html
@@ -1,1 +1,9 @@
 {% extends "base.html" %}
+{% block title %}
+updateuser
+{% endblock %}
+{% block content %}
+<p>TESTING BASE HTML</p>
+<p>Test: {{ test }}</p>
+<p>myTax: {{ myTax }}</p>
+{% endblock %}
