--- a/internaltools/templates/internaltools/base.html
+++ b/internaltools/templates/internaltools/base.html
@@ -24,7 +24,7 @@
     </head>
     <body>
         <div class="text-white font-weight-bold bg-danger">Internet</div>
-        include 'topmenu.html'
+        {% include 'internaltools/topmenu.html' with domain="example.com" %}
         <main class="container-fluid">
 <div class="row">
     <!-- left column -->
