fix static files on sardaukar

--- a/internaltools/templates/internaltools/base.html
+++ b/internaltools/templates/internaltools/base.html
@@ -8,7 +8,6 @@
         <link rel="icon" href="{% static 'internaltools/favicon.ico' %}">
         <link href="{% static 'internaltools/bootstrap.min.css' %}" rel="stylesheet">
 
-        
         <style>
             pre {
                 background: #ddd;
@@ -46,11 +45,8 @@
         <footer class="text-center">
             {% block footer %}
             {% endblock %}
-                <small> &copy; 1995–<script>
-    document.write(new Date().getFullYear())
-</script>
-                </small>
         </footer>
+    <div class="p-0 border border-bottom border-danger"></div>
     <script src="{% static 'internaltools/bootstrap.bundle.min.js' %}"></script>
 
     </body>
